# arducam_playground

./: .gitignore
fw/: Cargo.toml  build.rs  memory.x
fw/src/: cam.rs  camera.rs  main.rs  ov2640_regs.rs
host/: Cargo.toml
host/src/: main.rs
