[package]
name = "arducam_fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
rp2040-boot2 = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
